tests/baselines/reference/emptyGenericParamList.errors.txt
==== tests/cases/compiler/emptyGenericParamList.ts (1 errors) ====
    class I<T> {}
    var x: I<>;
             ~
!!! error TS1008: Unexpected token; 'identifier' expected.